--- a/Saucedemo/reports/Extentreports/Extentreport.html
+++ b/Saucedemo/reports/Extentreports/Extentreport.html
@@ -48,7 +48,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Apr 8, 2020 11:17:20 AM</span>
+                    <span class='label suite-start-time blue darken-3'>Apr 9, 2020 06:20:07 PM</span>
 				</a>
 			</li>
 			<li>
@@ -170,7 +170,7 @@
 					<canvas id='grandchild-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>33</span> step(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>34</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
 					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> step(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
@@ -190,12 +190,12 @@
 				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Saucedemo Website</span>
-						<span class='test-time'>Apr 8, 2020 11:17:21 AM</span>
+						<span class='test-time'>Apr 9, 2020 06:20:08 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='scenariooutline node' test-id='2' status='pass'>
-	<span class='duration right label'>0h 0m 34s+626ms</span>
+	<span class='duration right label'>0h 0m 45s+713ms</span>
 	<div class='desc'>
 		<b>ScenarioOutline</b>
 		<span class="desc-text">Login in the Saucedemo</span>
@@ -213,7 +213,7 @@
 			
 				<ul class='steps'>
 					<li test-id='4' class='node given pass' status='pass'><b>Given</b>
-						<span class="bdd-step-name">Given the user launch the chrome application</span>
+						<span class="bdd-step-name">Given the user launch the browser</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='5' class='node when pass' status='pass'><b>When</b>
@@ -221,7 +221,7 @@
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='6' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then the user login using name and pswd</span>
+						<span class="bdd-step-name">Then the user login using standard_user and secret_sauce</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='7' class='node then pass' status='pass'><b>Then</b>
@@ -233,7 +233,7 @@
 	</ul>
 </div>
 <div class='scenariooutline node' test-id='8' status='pass'>
-	<span class='duration right label'>0h 0m 42s+746ms</span>
+	<span class='duration right label'>0h 0m 54s+658ms</span>
 	<div class='desc'>
 		<b>ScenarioOutline</b>
 		<span class="desc-text">Select price-range</span>
@@ -251,7 +251,7 @@
 			
 				<ul class='steps'>
 					<li test-id='10' class='node given pass' status='pass'><b>Given</b>
-						<span class="bdd-step-name">Given TC02 the user launch the chrome application</span>
+						<span class="bdd-step-name">Given TC02 the user launch the browser</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='11' class='node when pass' status='pass'><b>When</b>
@@ -259,7 +259,7 @@
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='12' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC02 the user login using name and pswd</span>
+						<span class="bdd-step-name">Then TC02 the user login using standard_user and secret_sauce</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='13' class='node then pass' status='pass'><b>Then</b>
@@ -275,7 +275,7 @@
 	</ul>
 </div>
 <div class='scenariooutline node' test-id='15' status='pass'>
-	<span class='duration right label'>0h 0m 40s+84ms</span>
+	<span class='duration right label'>0h 1m 7s+921ms</span>
 	<div class='desc'>
 		<b>ScenarioOutline</b>
 		<span class="desc-text">Select product</span>
@@ -293,7 +293,7 @@
 			
 				<ul class='steps'>
 					<li test-id='17' class='node given pass' status='pass'><b>Given</b>
-						<span class="bdd-step-name">Given TC03 the user launch the chrome application</span>
+						<span class="bdd-step-name">Given TC03 the user launch the browser</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='18' class='node when pass' status='pass'><b>When</b>
@@ -301,7 +301,7 @@
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='19' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC03 the user login using name and pswd</span>
+						<span class="bdd-step-name">Then TC03 the user login using standard_user and secret_sauce</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='20' class='node then pass' status='pass'><b>Then</b>
@@ -321,10 +321,10 @@
 	</ul>
 </div>
 <div class='scenariooutline node' test-id='23' status='pass'>
-	<span class='duration right label'>0h 0m 31s+61ms</span>
+	<span class='duration right label'>0h 0m 24s+303ms</span>
 	<div class='desc'>
 		<b>ScenarioOutline</b>
-		<span class="desc-text">To know product is added to cart</span>
+		<span class="desc-text">To select product and continue shopping</span>
 	</div>
 	<ul class='steps'>
 		<li test-id='24' class='node scenario pass' status='pass'>
@@ -335,11 +335,11 @@
 			
 			<b>Scenario</b>
 			
-			<span class="bdd-step-name">To know product is added to cart</span>
+			<span class="bdd-step-name">To select product and continue shopping</span>
 			
 				<ul class='steps'>
 					<li test-id='25' class='node given pass' status='pass'><b>Given</b>
-						<span class="bdd-step-name">Given TC04 the user launch the chrome application</span>
+						<span class="bdd-step-name">Given TC04 the user launch the browser</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='26' class='node when pass' status='pass'><b>When</b>
@@ -347,19 +347,19 @@
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='27' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC04 the user login using name and pswd</span>
+						<span class="bdd-step-name">Then TC04 the user login using standard_user and secret_sauce</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='28' class='node then pass' status='pass'><b>Then</b>
 						<span class="bdd-step-name">Then TC04 click on the login button user nagivate to the next page</span>
 							<div class='pre'>passed</div>
 					</li>
-					<li test-id='29' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC04 the user select the product and add to cart</span>
+					<li test-id='29' class='node and pass' status='pass'><b>And</b>
+						<span class="bdd-step-name">And TC04 the user select the product and add to cart</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='30' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC04 check product is added to cart or not</span>
+						<span class="bdd-step-name">Then TC04 the user continue shopping</span>
 							<div class='pre'>passed</div>
 					</li>
 				</ul>
@@ -367,10 +367,10 @@
 	</ul>
 </div>
 <div class='scenariooutline node' test-id='31' status='pass'>
-	<span class='duration right label'>0h 2m 50s+355ms</span>
+	<span class='duration right label'>0h 1m 34s+323ms</span>
 	<div class='desc'>
 		<b>ScenarioOutline</b>
-		<span class="desc-text">To know product is added</span>
+		<span class="desc-text">To select menu</span>
 	</div>
 	<ul class='steps'>
 		<li test-id='32' class='node scenario pass' status='pass'>
@@ -381,11 +381,11 @@
 			
 			<b>Scenario</b>
 			
-			<span class="bdd-step-name">To know product is added</span>
+			<span class="bdd-step-name">To select menu</span>
 			
 				<ul class='steps'>
 					<li test-id='33' class='node given pass' status='pass'><b>Given</b>
-						<span class="bdd-step-name">Given TC05 the user launch the chrome application</span>
+						<span class="bdd-step-name">Given TC05 the user launch the browser</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='34' class='node when pass' status='pass'><b>When</b>
@@ -393,7 +393,7 @@
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='35' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC05 the user login using name and pswd</span>
+						<span class="bdd-step-name">Then TC05 the user login using standard_user and secret_sauce</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='36' class='node then pass' status='pass'><b>Then</b>
@@ -404,22 +404,26 @@
 						<span class="bdd-step-name">Then TC05 user opens the menu</span>
 							<div class='pre'>passed</div>
 					</li>
-					<li test-id='38' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC05 user click on About</span>
+					<li test-id='38' class='node and pass' status='pass'><b>And</b>
+						<span class="bdd-step-name">And TC05 user click on About and select Platform</span>
+							<div class='pre'>passed</div>
+					</li>
+					<li test-id='39' class='node then pass' status='pass'><b>Then</b>
+						<span class="bdd-step-name">Then Tc05 in platform user select Selenium</span>
 							<div class='pre'>passed</div>
 					</li>
 				</ul>
 		</li>
 	</ul>
 </div>
-<div class='scenariooutline node' test-id='39' status='pass'>
-	<span class='duration right label'>0h 1m 17s+761ms</span>
+<div class='scenariooutline node' test-id='40' status='pass'>
+	<span class='duration right label'>0h 0m 22s+400ms</span>
 	<div class='desc'>
 		<b>ScenarioOutline</b>
 		<span class="desc-text">Logout from Saucedemo</span>
 	</div>
 	<ul class='steps'>
-		<li test-id='40' class='node scenario pass' status='pass'>
+		<li test-id='41' class='node scenario pass' status='pass'>
 			<div class='category-list'>
 				<span class='category label white-text'>@TC06_Saucedemo</span>
 				<span class='category label white-text'>@Saucedemo</span>
@@ -430,28 +434,28 @@
 			<span class="bdd-step-name">Logout from Saucedemo</span>
 			
 				<ul class='steps'>
-					<li test-id='41' class='node given pass' status='pass'><b>Given</b>
-						<span class="bdd-step-name">Given TC06 the user launch the chrome application</span>
+					<li test-id='42' class='node given pass' status='pass'><b>Given</b>
+						<span class="bdd-step-name">Given TC06 the user launch the browser</span>
 							<div class='pre'>passed</div>
 					</li>
-					<li test-id='42' class='node when pass' status='pass'><b>When</b>
+					<li test-id='43' class='node when pass' status='pass'><b>When</b>
 						<span class="bdd-step-name">When TC06 the user open the Saucedemo Home page</span>
 							<div class='pre'>passed</div>
 					</li>
-					<li test-id='43' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC06 the user login using name and pswd</span>
-							<div class='pre'>passed</div>
-					</li>
 					<li test-id='44' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC06 click on the login button user nagivate to the next page</span>
+						<span class="bdd-step-name">Then TC06 the user login using standard_user and secret_sauce</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='45' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC06 user opens the menu</span>
+						<span class="bdd-step-name">Then TC06 click on the login button user nagivate to the next page</span>
 							<div class='pre'>passed</div>
 					</li>
 					<li test-id='46' class='node then pass' status='pass'><b>Then</b>
-						<span class="bdd-step-name">Then TC06 user click on Logout</span>
+						<span class="bdd-step-name">Then TC06 user opens the menu</span>
+							<div class='pre'>passed</div>
+					</li>
+					<li test-id='47' class='node and pass' status='pass'><b>And</b>
+						<span class="bdd-step-name">And TC06 user click on Logout</span>
 							<div class='pre'>passed</div>
 					</li>
 				</ul>
@@ -535,38 +539,38 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Apr 8, 2020 11:17:21 AM</td>
+										<td>Apr 9, 2020 06:20:08 PM</td>
 										<td class='linked' test-id='1'>Saucedemo Website</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 									<tr>
-										<td>Apr 8, 2020 11:17:21 AM</td>
+										<td>Apr 9, 2020 06:20:08 PM</td>
 										<td class='linked' test-id='3'>Saucedemo Website.Login in the Saucedemo.Login in the Saucedemo</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 									<tr>
-										<td>Apr 8, 2020 11:17:55 AM</td>
+										<td>Apr 9, 2020 06:20:53 PM</td>
 										<td class='linked' test-id='9'>Saucedemo Website.Select price-range.Select price-range</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 									<tr>
-										<td>Apr 8, 2020 11:18:38 AM</td>
+										<td>Apr 9, 2020 06:21:48 PM</td>
 										<td class='linked' test-id='16'>Saucedemo Website.Select product.Select product</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 									<tr>
-										<td>Apr 8, 2020 11:19:18 AM</td>
-										<td class='linked' test-id='24'>Saucedemo Website.To know product is added to cart.To know product is added to cart</td>
+										<td>Apr 9, 2020 06:22:56 PM</td>
+										<td class='linked' test-id='24'>Saucedemo Website.To select product and continue shopping.To select product and continue shopping</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 									<tr>
-										<td>Apr 8, 2020 11:19:49 AM</td>
-										<td class='linked' test-id='32'>Saucedemo Website.To know product is added.To know product is added</td>
+										<td>Apr 9, 2020 06:23:20 PM</td>
+										<td class='linked' test-id='32'>Saucedemo Website.To select menu.To select menu</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 									<tr>
-										<td>Apr 8, 2020 11:22:39 AM</td>
-										<td class='linked' test-id='40'>Saucedemo Website.Logout from Saucedemo.Logout from Saucedemo</td>
+										<td>Apr 9, 2020 06:24:54 PM</td>
+										<td class='linked' test-id='41'>Saucedemo Website.Logout from Saucedemo.Logout from Saucedemo</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
@@ -599,7 +603,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Apr 8, 2020 11:17:21 AM</td>
+										<td>Apr 9, 2020 06:20:08 PM</td>
 										<td class='linked' test-id='3'>Saucedemo Website.Login in the Saucedemo.Login in the Saucedemo</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -633,7 +637,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Apr 8, 2020 11:17:55 AM</td>
+										<td>Apr 9, 2020 06:20:53 PM</td>
 										<td class='linked' test-id='9'>Saucedemo Website.Select price-range.Select price-range</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -667,7 +671,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Apr 8, 2020 11:18:38 AM</td>
+										<td>Apr 9, 2020 06:21:48 PM</td>
 										<td class='linked' test-id='16'>Saucedemo Website.Select product.Select product</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
@@ -701,8 +705,8 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Apr 8, 2020 11:19:18 AM</td>
-										<td class='linked' test-id='24'>Saucedemo Website.To know product is added to cart.To know product is added to cart</td>
+										<td>Apr 9, 2020 06:22:56 PM</td>
+										<td class='linked' test-id='24'>Saucedemo Website.To select product and continue shopping.To select product and continue shopping</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
@@ -735,8 +739,8 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Apr 8, 2020 11:19:49 AM</td>
-										<td class='linked' test-id='32'>Saucedemo Website.To know product is added.To know product is added</td>
+										<td>Apr 9, 2020 06:23:20 PM</td>
+										<td class='linked' test-id='32'>Saucedemo Website.To select menu.To select menu</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
@@ -769,8 +773,8 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Apr 8, 2020 11:22:39 AM</td>
-										<td class='linked' test-id='40'>Saucedemo Website.Logout from Saucedemo.Logout from Saucedemo</td>
+										<td>Apr 9, 2020 06:24:54 PM</td>
+										<td class='linked' test-id='41'>Saucedemo Website.Logout from Saucedemo.Logout from Saucedemo</td>
 										<td><span class='test-status pass'>pass</span></td>
 									</tr>
 								</tbody>
@@ -811,25 +815,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>33</div>
+					<div class='panel-lead'>34</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Apr 8, 2020 11:17:20 AM</div>
+					<div class='panel-lead'>Apr 9, 2020 06:20:07 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Apr 8, 2020 11:23:57 AM</div>
+			 		<div class='panel-lead'>Apr 9, 2020 06:25:17 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>396,921ms</div>
+					<div class='panel-lead'>309,711ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -960,7 +964,7 @@
 				infoChild: 0,
 				exceptionsChild: 0,
 				
-				passGrandChild: 33,
+				passGrandChild: 34,
 				failGrandChild: 0,
 				fatalGrandChild: 0,
 				errorGrandChild: 0,
